--- a/index.html
+++ b/index.html
@@ -64,7 +64,15 @@
                         <a href="MasjidDarulmuhajireen.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
-                
+                <!-- Campaign 2 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="./images/MosqueYameyatulIslammeya-Profile.jpg" width="600" height="300" alt="มัสยิดดารุลมูฮาญีรีน" class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-4">บริจาคให้กับมัสยิดยำอียาตุลอิสลามียะห์</h3>
+                        <p class="text-gray-700 mb-6">บริจาคให้กับมัสยิดเพื่อบำรุงศาสนสถานและยังสามารถลดหย่อนภาษีได้</p>
+                        <a href="MosqueYameyatulIslammeya.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
