--- a/index.html
+++ b/index.html
@@ -92,11 +92,20 @@
                 </div>
                 <!-- Campaign 2 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/PattanasatWitayaSchool.png" width="600" height="300" alt="กองทุนเพื่อเด็กกำพร้าและยากจน พัฒนศาสน์วิทยา" class="w-full">
+                    <img src="./images/PattanasatWitayaSchool.png" width="500" height="200" alt="กองทุนเพื่อเด็กกำพร้าและยากจน พัฒนศาสน์วิทยา" class="w-full">
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-4">กองทุนเพื่อเด็กกำพร้าและยากจน พัฒนศาสน์วิทยา</h3>
                         <p class="text-gray-700 mb-6">โรงเรียนพัฒนศาสน์วิทยา หมุ่ที่ 4 ต.โคกเคียน อ.เมืองนราธิวาส จ.นราธิวาส 96000</p>
                         <a href="PattanasatWitayaSchool.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                    </div>
+                </div>
+                <!-- Campaign 3 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="./images/AnubanruesoSchool.png" width="600" height="300" alt="โรงเรียนอนุบาล รือเสาะ " class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-4">โรงเรียนอนุบาล รือเสาะ </h3>
+                        <p class="text-gray-700 mb-6">จัดหาแบบเรียน วัสดุอุปกรณ์ สื่อ และเทคโนโลยีเพื่อการศึกษา</p>
+                        <a href="AnubanruesoSchool.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 
