--- a/index.html
+++ b/index.html
@@ -108,6 +108,33 @@
                         <a href="AnubanruesoSchool.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
+                <!-- Campaign 4 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="./images/BanjuenueraeSchool.jpg" width="600" height="300" alt="โรงเรียนบ้านจือนือแร" class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-4">โรงเรียนบ้านจือนือแร</h3>
+                        <p class="text-gray-700 mb-6">กองทุนอาหารกลางวัน โรงเรียนบ้านจือนือแร</p>
+                        <a href="BanjuenueraeSchool.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                    </div>
+                </div>
+                <!-- Campaign 5 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="./images/BanjuenueraeSchool.jpg" width="600" height="300" alt="โรงเรียนบ้านจือนือแร" class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-4">โรงเรียนบ้านจือนือแร</h3>
+                        <p class="text-gray-700 mb-6">กองทุนอาหารกลางวัน โรงเรียนบ้านจือนือแร</p>
+                        <a href="BanjuenueraeSchool.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                    </div>
+                </div>
+                <!-- Campaign 6 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="./images/BanjuenueraeSchool.jpg" width="600" height="300" alt="โรงเรียนบ้านจือนือแร" class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-4">โรงเรียนบ้านจือนือแร</h3>
+                        <p class="text-gray-700 mb-6">กองทุนอาหารกลางวัน โรงเรียนบ้านจือนือแร</p>
+                        <a href="BanjuenueraeSchool.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                    </div>
+                </div>
                 
             </div>
         </div>
