--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="container mx-auto">
             <h1 class="text-4xl font-bold mb-4">บริจาคได้บุญ</h1>
             <p class="text-lg mb-6">ร่วมสนับสนุนและช่วยเหลือสังคมไปพร้อมกับเรา</p>
-            <a href="#Masjid" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคสมทบทุนช่วยเหลือมัสยิด</a>
+            <a href="#Masjid" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคให้มัสยิด</a>
             <a href="#School" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคให้โรงเรียน</a>
             <a href="#Hospital" class="bg-white text-green-600 px-6 py-2 rounded-lg hover:bg-gray-200">บริจาคให้โรงพยาบาล</a>
         </div>
@@ -71,6 +71,15 @@
                         <h3 class="text-xl font-semibold mb-4">บริจาคให้กับมัสยิดยำอียาตุลอิสลามียะห์</h3>
                         <p class="text-gray-700 mb-6">บริจาคให้กับมัสยิดเพื่อบำรุงศาสนสถานและยังสามารถลดหย่อนภาษีได้</p>
                         <a href="MosqueYameyatulIslammeya.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                    </div>
+                </div>
+                <!-- Campaign 3 -->
+                <div class="bg-white rounded-lg shadow-lg overflow-hidden">
+                    <img src="./images/MasjidIqamussolah.jpg" width="600" height="300" alt="มัสยิดดารุลมูฮาญีรีน" class="w-full">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-4">บริจาคให้กับมัสยิคอิกอมุสซอลาฮ์</h3>
+                        <p class="text-gray-700 mb-6">บริจาคให้กับมัสยิดเพื่อบำรุงศาสนสถานและยังสามารถลดหย่อนภาษีได้</p>
+                        <a href="MasjidIqamussolah.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
             </div>
