--- a/index.html
+++ b/index.html
@@ -137,11 +137,11 @@
                 </div>
                 <!-- Campaign 6 -->
                 <div class="bg-white rounded-lg shadow-lg overflow-hidden">
-                    <img src="./images/BanjuenueraeSchool.jpg" width="600" height="300" alt="โรงเรียนบ้านจือนือแร" class="w-full">
+                    <img src="./images/Darulibada.jpg" width="600" height="300" alt="ศูนย์พัฒนาเด็กเล็กมัสยิดดารุ้ลอิบาดะห์" class="w-full">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-4">โรงเรียนบ้านจือนือแร</h3>
-                        <p class="text-gray-700 mb-6">กองทุนอาหารกลางวัน โรงเรียนบ้านจือนือแร</p>
-                        <a href="BanjuenueraeSchool.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
+                        <h3 class="text-xl font-semibold mb-4">ศูนย์พัฒนาเด็กเล็กมัสยิดดารุ้ลอิบาดะห์</h3>
+                        <p class="text-gray-700 mb-6">จัดหาแบบเรียน วัสดุอุปกรณ์ สื่อ และเทคโนโลยีเพื่อการศึกษา</p>
+                        <a href="DarulibadaSchool.html" class="bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600">บริจาคเลย</a>
                     </div>
                 </div>
                 
