--- a/AnubanruesoSchool.html
+++ b/AnubanruesoSchool.html
@@ -26,7 +26,17 @@
             <p class="text-gray-700 mb-4">
                 ร่วมกันช่วยเหลือเพื่อเป็นทุนช่วยเหลือโรงเรียนและยังสามารถลดหย่อนภาษีได้2เท่า <br><b><a href="https://www.facebook.com/p/%E0%B9%82%E0%B8%A3%E0%B8%87%E0%B9%80%E0%B8%A3%E0%B8%B5%E0%B8%A2%E0%B8%99%E0%B8%AD%E0%B8%99%E0%B8%B8%E0%B8%9A%E0%B8%B2%E0%B8%A5-%E0%B8%A3%E0%B8%B7%E0%B8%AD%E0%B9%80%E0%B8%AA%E0%B8%B2%E0%B8%B0-100007748101382/">ข้อมูลโรงเรียนเพิ่มเติม</a></b>
             </p>
-            <a href="#" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600">ร่วมบริจาค</a>
+            <a href="#" id="donateBtn" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600">ร่วมบริจาค</a>
+            <!-- Modal Popup -->
+            <div id="donateModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50 hidden">
+                <div class="bg-white rounded-lg shadow-lg p-8 max-w-md w-full relative">
+                    <button id="closeModal" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+                    <h2 class="text-xl font-bold mb-4">ขอบคุณที่ร่วมบริจาค</h2>
+                    <p class="mb-4">โปรดสแกน QR Code เพื่อร่วมบริจาค หรือสอบถามข้อมูลเพิ่มเติมได้ที่โรงเรียน</p>
+                    <img src="./images/AnubanruesoSchool-QrCode.png" alt="QR Code" class="mx-auto mb-4 w-2/3">
+                    <a href="https://www.facebook.com/p/%E0%B9%82%E0%B8%A3%E0%B8%87%E0%B9%80%E0%B8%A3%E0%B8%B5%E0%B8%A2%E0%B8%99%E0%B8%AD%E0%B8%99%E0%B8%B8%E0%B8%9A%E0%B8%B2%E0%B8%A5-%E0%B8%A3%E0%B8%B7%E0%B8%AD%E0%B9%80%E0%B8%AA%E0%B8%B2%E0%B8%B0-100007748101382/" target="_blank" class="text-green-600 underline">ข้อมูลโรงเรียนเพิ่มเติม</a>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -36,5 +46,23 @@
             <p>&copy; 2024 บริจาคได้บุญ. All rights reserved.</p>
         </div>
     </footer>
+
+    <script>
+        // Show modal
+        document.getElementById('donateBtn').onclick = function(e) {
+            e.preventDefault();
+            document.getElementById('donateModal').classList.remove('hidden');
+        };
+        // Hide modal
+        document.getElementById('closeModal').onclick = function() {
+            document.getElementById('donateModal').classList.add('hidden');
+        };
+        // Close modal when clicking outside the modal content
+        document.getElementById('donateModal').onclick = function(e) {
+            if (e.target === this) {
+                this.classList.add('hidden');
+            }
+        };
+    </script>
 </body>
 </html>
