--- a/AnubanruesoSchool.html
+++ b/AnubanruesoSchool.html
@@ -22,7 +22,7 @@
                 จัดหาแบบเรียน วัสดุอุปกรณ์ สื่อ และเทคโนโลยีเพื่อการศึกษา
             </p>
             <img src="./images/AnubanruesoSchool.png" width="100%" height="100%" alt="โรงเรียนอนุบาล รือเสาะ" ><br>
-            <img src="./images/AnubanruesoSchool-QrCode.png" width="30%" height="30%" alt="จัดหาแบบเรียน วัสดุอุปกรณ์ สื่อ และเทคโนโลยีเพื่อการศึกษา" >
+            <img src="./images/AnubanruesoSchool-QrCode.png" width="30%" height="30%" alt="จัดหาแบบเรียน วัสดุอุปกรณ์ สื่อ และเทคโนโลยีเพื่อการศึกษา" id="qrPreviewBtn" class="cursor-pointer">
             <p class="text-gray-700 mb-4">
                 ร่วมกันช่วยเหลือเพื่อเป็นทุนช่วยเหลือโรงเรียนและยังสามารถลดหย่อนภาษีได้2เท่า <br><b><a href="https://www.facebook.com/p/%E0%B9%82%E0%B8%A3%E0%B8%87%E0%B9%80%E0%B8%A3%E0%B8%B5%E0%B8%A2%E0%B8%99%E0%B8%AD%E0%B8%99%E0%B8%B8%E0%B8%9A%E0%B8%B2%E0%B8%A5-%E0%B8%A3%E0%B8%B7%E0%B8%AD%E0%B9%80%E0%B8%AA%E0%B8%B2%E0%B8%B0-100007748101382/">ข้อมูลโรงเรียนเพิ่มเติม</a></b>
             </p>
@@ -35,6 +35,13 @@
                     <p class="mb-4">โปรดสแกน QR Code เพื่อร่วมบริจาค หรือสอบถามข้อมูลเพิ่มเติมได้ที่โรงเรียน</p>
                     <img src="./images/AnubanruesoSchool-QrCode.png" alt="QR Code" class="mx-auto mb-4 w-2/3">
                     <a href="https://www.facebook.com/p/%E0%B9%82%E0%B8%A3%E0%B8%87%E0%B9%80%E0%B8%A3%E0%B8%B5%E0%B8%A2%E0%B8%99%E0%B8%AD%E0%B8%99%E0%B8%B8%E0%B8%9A%E0%B8%B2%E0%B8%A5-%E0%B8%A3%E0%B8%B7%E0%B8%AD%E0%B9%80%E0%B8%AA%E0%B8%B2%E0%B8%B0-100007748101382/" target="_blank" class="text-green-600 underline">ข้อมูลโรงเรียนเพิ่มเติม</a>
+                </div>
+            </div>
+            <!-- QR Code Preview Modal -->
+            <div id="qrPreviewModal" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center z-50 hidden">
+                <div class="bg-white rounded-lg shadow-lg p-4 relative max-w-xs w-full">
+                    <button id="closeQrPreview" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+                    <img src="./images/AnubanruesoSchool-QrCode.png" alt="QR Code Preview" class="mx-auto w-full h-auto">
                 </div>
             </div>
         </div>
@@ -59,6 +66,21 @@
         };
         // Close modal when clicking outside the modal content
         document.getElementById('donateModal').onclick = function(e) {
+            if (e.target === this) {
+                this.classList.add('hidden');
+            }
+        };
+
+        // Show QR preview modal
+        document.getElementById('qrPreviewBtn').onclick = function() {
+            document.getElementById('qrPreviewModal').classList.remove('hidden');
+        };
+        // Hide QR preview modal
+        document.getElementById('closeQrPreview').onclick = function() {
+            document.getElementById('qrPreviewModal').classList.add('hidden');
+        };
+        // Close QR preview modal when clicking outside the modal content
+        document.getElementById('qrPreviewModal').onclick = function(e) {
             if (e.target === this) {
                 this.classList.add('hidden');
             }
