--- a/BanpadendengSchool.html
+++ b/BanpadendengSchool.html
@@ -26,7 +26,7 @@
             <p class="text-gray-700 mb-4">
                 ร่วมกันช่วยเหลือเพื่อเป็นทุนช่วยเหลือโรงเรียนและยังสามารถลดหย่อนภาษีได้2เท่า <br><b><a href="https://www.facebook.com/profile.php?id=100063467230274">ข้อมูลโรงเรียนเพิ่มเติม</a></b>
             </p>
-            <a href="#" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600">ร่วมบริจาค</a>
+            <a href="#" id="donateBtn" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600">ร่วมบริจาค</a>
         </div>
         <!-- QR Code Preview Modal -->
         <div id="qrPreviewModal" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center z-50 hidden">
@@ -46,6 +46,11 @@
     <script>
         // Show QR preview modal
         document.getElementById('qrPreviewBtn').onclick = function() {
+            document.getElementById('qrPreviewModal').classList.remove('hidden');
+        };
+        // Show QR preview modal when clicking donate button
+        document.getElementById('donateBtn').onclick = function(e) {
+            e.preventDefault();
             document.getElementById('qrPreviewModal').classList.remove('hidden');
         };
         // Hide QR preview modal
