--- a/Betong-Hospital.html
+++ b/Betong-Hospital.html
@@ -22,12 +22,19 @@
                 ท่านสามารถบริจาคให้กับโรงพยาบาลเบตง เพื่อจัดซื้ออุปกรณ์การแพทย์ ได้ลดหย่อนภาษี2เท่า ไม่เกิน 10% ของรายได้หลังหักค่าใช้จ่ายและลดหย่อนอื่น ๆ
             </p>
             <img src="./images/Betong-Hospital.jpg" width="100%"" height="100%"" alt="บริจาคให้ โรงพยาบาลเบตง ลดหย่อน 2 เท่า" ><br>
-            <img src="./images/Betong-Hospital-QRCode.png" width="90%"" height="90%"" alt="บริจาคให้ โรงพยาบาลเบตง ลดหย่อน 2 เท่า" >
+            <img src="./images/Betong-Hospital-QRCode.png" width="90%" height="90%" alt="บริจาคให้ โรงพยาบาลเบตง ลดหย่อน 2 เท่า" id="qrPreviewBtn" class="cursor-pointer">
             <p class="text-gray-700 mb-4">
                 โรงพยาบาลนี้เป็นส่วนหนึ่งที่เราเลือกแต่ยังมีอีกหลายที่ท่านสามารถดูข้อมูลเพิ่มเติมได้ที่
                  <a href="https://www.facebook.com/profile.php?id=100069188644843">ข้อมูลเพิ่มเติมของโรงพยาบาล</a>
             </p>
             <a href="#" class="bg-green-500 text-white px-6 py-2 rounded-lg hover:bg-green-600">ร่วมบริจาค</a>
+        </div>
+        <!-- QR Code Preview Modal -->
+        <div id="qrPreviewModal" class="fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center z-50 hidden">
+            <div class="bg-white rounded-lg shadow-lg p-4 relative max-w-xs w-full">
+                <button id="closeQrPreview" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 text-2xl">&times;</button>
+                <img src="./images/Betong-Hospital-QRCode.png" alt="QR Code Preview" class="mx-auto w-full h-auto">
+            </div>
         </div>
     </section>
 
@@ -37,5 +44,21 @@
             <p>&copy; 2024 บริจาคได้บุญ. All rights reserved.</p>
         </div>
     </footer>
+    <script>
+        // Show QR preview modal
+        document.getElementById('qrPreviewBtn').onclick = function() {
+            document.getElementById('qrPreviewModal').classList.remove('hidden');
+        };
+        // Hide QR preview modal
+        document.getElementById('closeQrPreview').onclick = function() {
+            document.getElementById('qrPreviewModal').classList.add('hidden');
+        };
+        // Close QR preview modal when clicking outside the modal content
+        document.getElementById('qrPreviewModal').onclick = function(e) {
+            if (e.target === this) {
+                this.classList.add('hidden');
+            }
+        };
+    </script>
 </body>
 </html>
